updated contact card

--- a/index.html
+++ b/index.html
@@ -3,19 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/style.css">
+
     <title>Document</title>
 </head>
 <body>
-    
-    <!-- 
-    You must have: 
-    - a profile picture image
-    - Name
-    - Title
-    - Phone Number
-    - Company/Organization Name
+    <article class="article-container">
+        <img src="./images/profile-picture.jpg">
+        <div class="container">
+            <div class="contact-info">
+                <p>Kerry McKenney</p>
+                <p>502-910-3623</p>
+            </div>
+            <div class="contact-info2">
+                <p>Aspiring full stack developer</p>
+                <p>Student at Code:You</p>
+            </div>
+        </div>
 
-    -->
+
+    </article>
     
 
 
